fix(style): prevent scroll jump on focus radios

--- a/src/scss/_rating-svg.scss
+++ b/src/scss/_rating-svg.scss
@@ -3,8 +3,9 @@
 
   [type=radio] {
     position: absolute;
-    top: -9999em;
-    left: -9999em;
+    top: 0;
+    right: 100%;
+    opacity: 0;
   }
 }
 
